# acine

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  DESIGN.md  README.md  TODO.md  Taskfile.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat
.github/workflows/: ci.yaml
backend/: .gitignore  README.md  Taskfile.yaml  app.py  background.py  debug.ipynb  main.py  pyproject.toml  requirements.pb.txt  requirements.txt  runtime.py  runtime_example.py  service.py  start.bat
backend/data/: .gitignore  README.md
backend/data/test/: archive.7z
backend/src/: capture.py  classifier.py  input_handler.py  persist.py  server.py
backend/src/acine/: capture.py  classifier.py  convert.py  dev.py  environ.py  input_handler.py  instance_manager.py  logging.py  persist.py  preset_impl.py  server.py  window_interface.py
backend/src/acine/power/: __init__.py  win32.py
backend/src/acine/runtime/: check.py  check_image.py  exceptions.py  grpc.py  runtime.py  util.py
backend/src/acine/scheduler/: __init__.py  cron.py  managed_runtime.py  multischeduler.py  scheduler.py  typing.py
backend/src/runtime/: check.py  check_image.py  main.py  runtime.py  util.py
backend/tests/: conftest.py  test_persist.py
backend/tests/runtime/: experiment.ipynb  test_check.py  test_check_image.py  test_runtime.py  test_runtime_except.py  test_runtime_v2.py  triangle.js  util.py
backend/tests/scheduler/: test_cron.py  test_scheduler.py
frontend/: Taskfile.yaml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  start.bat  tsconfig.app.json  vite.config.ts
frontend/src/: App.state.ts  App.tsx  AppSetup.tsx  activity.ts  fonts.css  index.css  main.tsx  math.ts  prettier.config.mjs  state.ts
frontend/src/client/: encoder.ts  input_source.ts  input_stream.spec.ts  input_stream.ts  util.ts  ws.ts
frontend/src/components/: ActionEditor.spec.ts  ActionEditor.tsx  ActionEditor.util.ts  BindingsDisplay.tsx  Button.tsx  Condition.tsx  ConditionImageEditor.tsx  (+30 more)
proto/: README.md  Taskfile.yaml  frame.proto  package-lock.json  package.json  packet.proto  routine.proto  test.ts
proto/src/: frame.proto  input_event.proto  packet.proto  position.proto  routine.proto  runtime.proto
testenv/: README.md  main.py  pyproject.toml  start.bat
(+20 files in other folders)
