[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acine-proto-dist",
    "ahk[binary]==1.8.3",
    "aiofiles==24.1.0",
    "autobahn[asyncio]==24.4.2",
    "networkx==3.4.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.2.1",
    "pytest-dependency>=0.6.0",
    "pytest-mock>=3.14.0",
    "pytest-picked>=0.5.1",
    "pytest-testmon>=2.1.3",
    "pytest-watcher>=0.4.3",
    "pywin32>=311",
    "scikit-image==0.25.2",
    "types-pywin32>=311.0.0.20250822",
    "windows-capture==1.4.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
acine-proto-dist = { path = "../proto/dist/py" }
